# Precision_landing_ardupilot

./: README.md  camera_tag_setup.sh
apriltag_ros/cfg/: tags_36h11.yaml
apriltag_ros/src/: AprilTagNode.cpp
installation/: MAVROS_INSTALL.md
precision_landing/: CMakeLists.txt  package.xml
precision_landing/src/: person_tracking.py  precision_landing_ardupilot.py
